# HW_3

./: HW3_1st_task.py  HW3_2nd_task.py  pyproject.toml
