[tool.poetry]
name = "file-sorter"
version = "0.1.0"
description = ""
authors = ["Gaveloshpom <gaveloshpom@gmail.com>"]
readme = "README.md"
packages = [{include = "file_sorter"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
